Edited the esp32 code (attempt to do real time audio filtering) Added python script to plot the audio data

--- a/XIAO ESP32S3/platformio.ini
+++ b/XIAO ESP32S3/platformio.ini
@@ -13,3 +13,5 @@ platform = espressif32
 board = seeed_xiao_esp32s3
 framework = arduino
 monitor_speed = 112600
+lib_deps = 
+	tttapa/Arduino Filters@^1.0.0
