--- a/XIAO ESP32S3/platformio.ini
+++ b/XIAO ESP32S3/platformio.ini
@@ -16,3 +16,4 @@ monitor_speed = 115200
 lib_deps = 
 	tttapa/Arduino Filters@^1.0.0
 	plerup/EspSoftwareSerial@^8.1.0
+	francis-magallanes/CircularQueue@^1.1.0
