--- a/XIAO ESP32S3/platformio.ini
+++ b/XIAO ESP32S3/platformio.ini
@@ -13,7 +13,9 @@ platform = espressif32
 board = seeed_xiao_esp32s3
 framework = arduino
 monitor_speed = 115200
-lib_deps = 
+lib_deps = ESP Async WebServer
+  	ayushsharma82/WebSerial @ ^1.1.0
 	tttapa/Arduino Filters@^1.0.0
 	plerup/EspSoftwareSerial@^8.1.0
 	francis-magallanes/CircularQueue@^1.1.0
+
