--- a/XIAO ESP32S3/platformio.ini
+++ b/XIAO ESP32S3/platformio.ini
@@ -18,4 +18,5 @@ lib_deps = ESP Async WebServer
 	tttapa/Arduino Filters@^1.0.0
 	plerup/EspSoftwareSerial@^8.1.0
 	francis-magallanes/CircularQueue@^1.1.0
+	WiFi
 
